# Newtonian-Physics-Sandbox

./: CMakeLists.txt  README.md
include/: ntphyssbox.hpp
src/: Initializer.hpp  axisalignedboundingbox.cpp  axisalignedboundingbox.hpp  boundingObject.hpp  boundingObjectTree.hpp  boundingSphere.hpp  cell.hpp  collision.hpp  collisionBody.cpp  collisionBody.hpp  collisionDetection.hpp  collisionResolve.cpp  collisionResolve.hpp  collisionTreeDetection.hpp  composedSpheresCB.cpp  composedSpheresCB.hpp  npsworld.cpp  npsworld.hpp  phys.cpp  phys.hpp  shape.hpp  tensor.hpp  writer.hpp
src/examples/: Makefile  NewtonsBalls.cpp  billiardBalls.cpp  lonelySphere.cpp  singleSphereOBJ.cpp  twospherescollision.cpp
src/import/: npsimporter.cpp  npsimporter.hpp
src/math/: tensor.cpp  tensor.hpp
src/physics/body/: collisionBody.cpp  collisionBody.hpp  composedSpheresCB.cpp  composedSpheresCB.hpp
src/physics/bounding/: axisalignedboundingbox.cpp  axisalignedboundingbox.hpp  boundingObject.hpp  boundingObjectTree.hpp  boundingSphere.cpp  boundingSphere.hpp
src/physics/collision/: collision.cpp  collision.hpp  collisionDetection.hpp  collisionResolve.cpp  collisionResolve.hpp  collisionTreeDetection.hpp
src/shell/: initializer.cpp  initializer.hpp  npsworld.cpp  npsworld.hpp  povraytexture.cpp  povraytexture.hpp  writer.cpp  writer.hpp
